--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "tabWidth": 4,
+  "useTabs": true
 }
