--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/swagger": "^6.3.0",
     "@supabase/supabase-js": "^2.21.0",
     "dotenv": "^16.0.3",
+    "module": "^1.2.5",
     "mysql2": "^3.2.1",
     "nestjs-supabase-auth": "^1.0.9",
+    "onesignal-api-client-nest": "^1.0.10",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.10.0",
