--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/devtools-integration": "^0.1.5",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@supabase/supabase-js": "^2.21.0",
     "dotenv": "^16.0.3",
-    "module": "^1.2.5",
+    "module": "^1.1.0",
     "mysql2": "^3.2.1",
     "nestjs-supabase-auth": "^1.0.9",
     "onesignal-api-client-nest": "^1.0.10",
